[gd_scene load_steps=17 format=2]

[ext_resource path="res://Juego/Meteoritos/MeteoritoSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Meteoritos/SectorMeteoritos.gd" type="Script" id=2]
[ext_resource path="res://Juego/Meteoritos/Kenney Future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Juego/Meteoritos/audio_advertencia.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=9]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 600.813 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.5, 601.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1020.5, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1019.5, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 23.5, 1128 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 25.5, 1127.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1548.5, 22.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 1548.5, 24.5 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Aviso/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Aviso:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Aviso/ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Aviso/ColorRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.411765 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -50.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AudioStreamPlayer:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "advertencia"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Aviso:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Aviso/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Aviso/ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Aviso/ColorRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.411765 ), Color( 1, 1, 1, 0.411765 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AudioStreamPlayer:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -20.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("SpawnerTimer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Aviso/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Aviso/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="SectorMeteoritos" type="Node2D"]
script = ExtResource( 2 )

[node name="Aviso" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Aviso"]
modulate = Color( 1, 1, 1, 0.411765 )
margin_right = 1920.0
margin_bottom = 1081.0
color = Color( 1, 0, 0, 1 )

[node name="Label" type="Label" parent="Aviso"]
margin_right = 1920.0
margin_bottom = 1078.0
custom_fonts/font = SubResource( 9 )
text = "Â¡Advertencia!
Lluvia de meteoritos inminente"
align = 1
valign = 1

[node name="Bordes" type="Node2D" parent="."]

[node name="Borde1" type="StaticBody2D" parent="Bordes"]
position = Vector2( -960, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/Borde1"]
position = Vector2( -29, 2.1875 )
shape = SubResource( 1 )

[node name="Borde2" type="StaticBody2D" parent="Bordes"]
position = Vector2( 960, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/Borde2"]
position = Vector2( 31.5, 1.5 )
shape = SubResource( 2 )

[node name="Borde3" type="StaticBody2D" parent="Bordes"]
position = Vector2( 0, -540 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/Borde3"]
position = Vector2( 1.5, -29 )
shape = SubResource( 3 )

[node name="Borde4" type="StaticBody2D" parent="Bordes"]
position = Vector2( 0, 540 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/Borde4"]
position = Vector2( 2.5, 32 )
shape = SubResource( 4 )

[node name="Detectores" type="Node2D" parent="."]

[node name="Detector1" type="Area2D" parent="Detectores"]
position = Vector2( -1500, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectores/Detector1"]
position = Vector2( -24.5, 0 )
shape = SubResource( 5 )

[node name="Detector2" type="Area2D" parent="Detectores"]
position = Vector2( 1500, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectores/Detector2"]
position = Vector2( 24, -0.5 )
shape = SubResource( 6 )

[node name="Detector3" type="Area2D" parent="Detectores"]
position = Vector2( 0, -1080 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectores/Detector3"]
position = Vector2( 0.5, -24.5 )
shape = SubResource( 7 )

[node name="Detector4" type="Area2D" parent="Detectores"]
position = Vector2( 0, 1080 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectores/Detector4"]
position = Vector2( 0.5, 23.5 )
shape = SubResource( 8 )

[node name="Spawners" type="Node2D" parent="."]

[node name="MeteoritoSpawner" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1250, -850 )
direccion = Vector2( 2, 2 )

[node name="MeteoritoSpawner2" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -625, -850 )
direccion = Vector2( 1, 2 )

[node name="MeteoritoSpawner3" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, -850 )
direccion = Vector2( 0, 2 )

[node name="MeteoritoSpawner4" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 625, -850 )
direccion = Vector2( -1, 2 )

[node name="MeteoritoSpawner5" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1250, -850 )
direccion = Vector2( -2, 2 )

[node name="MeteoritoSpawner6" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1250, 850 )
direccion = Vector2( 2, -2 )

[node name="MeteoritoSpawner7" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -625, 850 )
direccion = Vector2( 1, -2 )

[node name="MeteoritoSpawner8" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, 850 )
direccion = Vector2( 0, -2 )

[node name="MeteoritoSpawner9" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 625, 850 )
direccion = Vector2( -1, -2 )

[node name="MeteoritoSpawner10" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1250, 850 )
direccion = Vector2( -2, -2 )

[node name="MeteoritoSpawner11" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1250, -425 )
direccion = Vector2( 2, 1 )

[node name="MeteoritoSpawner12" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1250, 0 )
direccion = Vector2( 2, 0 )

[node name="MeteoritoSpawner13" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1250, 425 )
direccion = Vector2( 2, -1 )

[node name="MeteoritoSpawner14" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1250, -425 )
direccion = Vector2( -2, 1 )

[node name="MeteoritoSpawner15" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1250, 0 )
direccion = Vector2( -2, 0 )

[node name="MeteoritoSpawner16" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1250, 425 )
direccion = Vector2( -2, -1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="SpawnerTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -50.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/RESET = SubResource( 10 )
anims/advertencia = SubResource( 11 )
anims/default = SubResource( 12 )

[connection signal="timeout" from="SpawnerTimer" to="." method="_on_Timer_timeout"]
